--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -2,13 +2,33 @@
   &-1
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
-    top: 40%
-    right: 50%
+    top: 30%
+    right: 20%
+    z-index: 3
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
-    top: 51%
+    top: 10%
+    right: 70%
+    z-index: 2
+  &-3
+    animation: float2 3.8s ease-in-out infinite alternate
+    position: absolute
+    top: 41%
+    right: 70%
+    z-index: 3
+    width: 100px
+  &-4
+    animation: float2 2.8s ease-in-out infinite alternate
+    position: absolute
+    top: 11%
     right: 30%
+    z-index: 3
+    width: 100px
+.banner-principal__img
+  img
+    position: relative
+    z-index: 3
 
 @keyframes float1
   0%
@@ -16,6 +36,12 @@
 
   100%
     transform: translateY(0px)
+@keyframes float2
+  0%
+    transform: translateX(20px)
+
+  100%
+    transform: translateX(0px)
 .titulo-principal.color-acento-contenido .titulo-principal__numero
   span
     color: $white
@@ -89,3 +115,10 @@
 .slyder-f__btn
   i
     color: $color-acento-botones
+.slyder-a__bullets__item
+  background-color: #ded4ff
+  border: 0
+.slyder-a__bullets__item--active
+  background-color: $color-acento-botones
+.horizontal-scroll
+  padding: 2rem .5rem
